# cmake-sfml-project

./: CMakeLists.txt
include/: block.h  snake.h
src/: block.cpp  main.cpp  snake.cpp
